algunos cambios de preentrega2

--- a/src/views/realTimeProducts.handlebars
+++ b/src/views/realTimeProducts.handlebars
@@ -9,12 +9,13 @@
         <title>Productos en Tiempo Real</title>
     </head>
     <body>
+        <h1>Lista de Productos:</h1>
         <div class="container" id="products">
-            {{#each products}}
+            {{!-- {{#each products}}
                 <li class="product">
                     <p class="productTitle">{{this.title}}</p> <button class="deletePB" id="deleteP{{this.id}}">Eliminar</button>
                 </li>
-            {{/each}}
+            {{/each}} --}}
         </div>
         <div class="container2">
             <h1>Agregar Producto</h1>
